Add RecordConverter with test. Closes #220.