@@ -273,6 +273,80 @@
       </build>
     </profile>
     <profile>
+      <id>jdk16-ge</id>
+      <activation>
+        <jdk>[16,)</jdk>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+              <testExcludes>
+                <exclude>**/Record**</exclude>
+              </testExcludes>
+            </configuration>
+            <executions>
+              <execution>
+                <id>compile-jdk16</id>
+                <configuration>
+                  <release>16</release>
+                  <testExcludes combine.self="override" />
+                  <testIncludes>
+                    <include>**/Record**</include>
+                  </testIncludes>
+                </configuration>
+                <goals>
+                  <goal>testCompile</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>jdk15</id>
+      <activation>
+        <jdk>15</jdk>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+              <testExcludes>
+                <exclude>**/Record**</exclude>
+              </testExcludes>
+            </configuration>
+            <executions>
+              <execution>
+                <id>compile-jdk15</id>
+                <configuration>
+                  <release>15</release>
+                  <testExcludes combine.self="override" />
+                  <testIncludes>
+                    <include>**/Record**</include>
+                  </testIncludes>
+                  <compilerArgs>
+                    <arg>--enable-preview</arg>
+                  </compilerArgs>
+                </configuration>
+                <goals>
+                  <goal>testCompile</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+      <properties>
+        <surefire.preview.arg>--enable-preview</surefire.preview.arg>
+      </properties>
+    </profile>
+    <profile>
       <id>jdk11-ge</id>
       <activation>
         <jdk>[11,)</jdk>
@@ -293,8 +367,27 @@
         </plugins>
       </build>
       <properties>
-        <surefire.argline>--illegal-access=${surefire.illegal.access}</surefire.argline>
+        <surefire.argline>${surefire.preview.arg} --illegal-access=${surefire.illegal.access}</surefire.argline>
       </properties>
+    </profile>
+    <profile>
+      <id>jdk9-ge-jdk14</id>
+      <activation>
+        <jdk>[9,15)</jdk>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+              <testExcludes>
+                <exclude>**/Record**</exclude>
+              </testExcludes>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
     </profile>
     <profile>
       <id>jdk9-ge-jdk10</id>
@@ -337,6 +430,7 @@
             <configuration>
               <testExcludes>
                 <exclude>**/*9Test.java</exclude>
+                <exclude>**/Record**</exclude>
               </testExcludes>
             </configuration>
           </plugin>
